homepage-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage-backend
  labels:
    app: homepage
spec:
  type: NodePort
  selector:
    app: homepage
    tier: web
  ports:
  - port: 80
    targetPort: 80
