ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homepage
  annotations:
    kubernetes.io/ingress.global-static-ip-name: homepage-ip
  labels:
    app: homepage
spec:
  backend:
    serviceName: homepage-backend
    servicePort: 80
